gl31-master/src/test/deca/context/valid/complet/cast2.deca
// Description:
//    Test valide pour complet context
//
// Resultats:
//    Succes
//
// Historique:
//    cree le 24/01/2021
{
    float f;
    int a = (int)(f);
}
