gl31-master/src/test/deca/context/invalid/sansobjet/affect_void_float.deca
// Description:
//    Affectation et typage : associe un void a un float
//
// Resultats:
//    Ligne 15: Affectation de types incompatibles.
//
// Historique:
//    cree le 08/01/2021

{
   float a;
   void b;

   // Doit etre refuse.
   a = b;
}
